--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <header>
+      <% if customer_signed_in? %>
+        <li>
+          <%= link_to "マイページ", customers_my_page_path %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to "About", about_path %>
+        </li>
+      <% end %>
+    </header>
+
     <%= yield %>
   </body>
 </html>
